--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ title: The C++ Alliance
             <div class="col-lg-4">
                 <a href="people/vinnie.html">
                 <div class="member">
-                  <div class="pic"><img src="people/vinnie.jpg" alt=""></div>
+                  <div class="pic"><img src="/people/vinnie.jpg" alt=""></div>
                   <div class="details">
                     <h4>Vinnie Falco</h4>
                     <span>Board Member</span>
@@ -172,7 +172,7 @@ title: The C++ Alliance
             <div class="col-lg-4">
                 <a href="people/rene.html">
                 <div class="member">
-                  <div class="pic"><img src="people/rene.jpg" alt=""></div>
+                  <div class="pic"><img src="/people/rene.jpg" alt=""></div>
                   <div class="details">
                     <h4>René Rivera</h4>
                     <span>Board Member</span>
@@ -184,7 +184,7 @@ title: The C++ Alliance
             <div class="col-lg-4">
                 <a href="people/jon.html">
                 <div class="member">
-                  <div class="pic"><img src="/images/pro-img.jpg" alt=""></div>
+                  <div class="pic"><img src="/people/jon.jpg" alt=""></div>
                   <div class="details">
                     <h4>Jon Kalb</h4>
                     <span>Board Member</span>
@@ -196,7 +196,7 @@ title: The C++ Alliance
             <div class="col-lg-4">
                 <a href="people/louis.html">
                 <div class="member">
-                  <div class="pic"><img src="people/louis.jpg" alt=""></div>
+                  <div class="pic"><img src="/people/louis.jpg" alt=""></div>
                   <div class="details">
                     <h4>Louis Tatta</h4>
                     <span>Executive Team</span>
@@ -208,7 +208,7 @@ title: The C++ Alliance
             <div class="col-lg-4">
                 <a href="people/marshall.html">
                 <div class="member">
-                  <div class="pic"><img src="people/marshall.jpg" alt=""></div>
+                  <div class="pic"><img src="/people/marshall.jpg" alt=""></div>
                   <div class="details">
                     <h4>Marshall Clow</h4>
                     <span>Staff Engineer</span>
@@ -220,7 +220,7 @@ title: The C++ Alliance
             <div class="col-lg-4">
                 <a href="people/damian.html">
                 <div class="member">
-                  <div class="pic"><img src="/images/pro-img.jpg" alt=""></div>
+                  <div class="pic"><img src="/people/damian.jpg" alt=""></div>
                   <div class="details">
                     <h4>Damian Jarek</h4>
                     <span>Staff Engineer</span>
@@ -232,7 +232,7 @@ title: The C++ Alliance
             <div class="col-lg-4">
                 <a href="people/glen.html">
                 <div class="member">
-                  <div class="pic"><img src="/images/pro-img.jpg" alt=""></div>
+                  <div class="pic"><img src="/people/glen.jpg" alt=""></div>
                   <div class="details">
                     <h4>Glen Fernandes</h4>
                     <span>Technical Committee</span>
@@ -244,10 +244,10 @@ title: The C++ Alliance
             <div class="col-lg-4">
                 <a href="people/jens.html">
                 <div class="member">
-                  <div class="pic"><img src="people/jens.jpg" alt=""></div>
+                  <div class="pic"><img src="/people/jens.jpg" alt=""></div>
                   <div class="details">
                     <h4>Jens Weller</h4>
-                    <span>Advisor</span>
+                    <span>Technical Committee</span>
                   </div>
                 </div>
                 </a>
@@ -277,10 +277,10 @@ title: The C++ Alliance
     </div>
 </section>
 
-<!-- Resources section-->
+<!-- Links section-->
 <section class="innerSection eesourceS" id="4">
 	<div class="container">
-    <div class="pageHeadtxt"><h1>Resources</h1><h2>Resources</h2></div>
+    <div class="pageHeadtxt"><h1>Links</h1><h2>Links</h2></div>
     	<div class="row">
     	<div class="col-lg-12">
         <ul class="newsS">
