--- a/people/damian.html
+++ b/people/damian.html
@@ -4,6 +4,8 @@ title: Damian Jarek
 team-id: damian
 team-title: Staff Engineer
 team-email: damian.jarek93@gmail.com
+team-github: https://github.com/djarek
+team-linkedin: https://www.linkedin.com/in/damian-jarek-9a97b4ba/
 ---
 {% include team-bio.html %}
 
