--- a/people/jon.html
+++ b/people/jon.html
@@ -4,6 +4,12 @@ title: Jon Kalb
 team-id: jon
 team-title: Board Member
 team-email: jon@kalbweb.com
+team-site: http://slashslash.info
+team-site-text: slashslash.info
+team-stack-overflow: https://stackoverflow.com/users/2646369/jon-kalb
+team-github: https://github.com/JonKalb
+team-linkedin: https://www.linkedin.com/in/jonkalb/
+team-twitter: https://twitter.com/_JonKalb/
 ---
 {% include team-bio.html %}
 
