--- a/people/louis.html
+++ b/people/louis.html
@@ -6,6 +6,7 @@ team-title: Chief Executive Officer
 team-email: louis@cppalliance.org
 team-site: https://louistatta.wordpress.com/
 team-site-text: louistatta.com
+team-linkedin: https://www.linkedin.com/in/louis-tatta-83987b2/
 ---
 {% include team-bio.html %}
 
