--- a/people/marshall.html
+++ b/people/marshall.html
@@ -6,6 +6,7 @@ team-title: Staff Engineer
 team-email: marshall@idio.com
 team-site: https://cplusplusmusings.wordpress.com
 team-site-text: cplusplusmusings.wordpress.com
+team-stack-overflow: https://stackoverflow.com/users/992490/marshall-clow
 team-github: https://github.com/mclow
 team-linkedin: https://www.linkedin.com/in/marshall-clow-47284/
 team-facebook: https://www.facebook.com/marshall.clow
