--- a/people/rene.html
+++ b/people/rene.html
@@ -6,6 +6,10 @@ team-title: Board Member
 team-email: grafikrobot@gmail.com
 team-site: https://boostorg.github.io/build/
 team-site-text: boostorg.github.io/build
+team-stack-overflow: https://stackoverflow.com/users/318688/grafikrobot
+team-github: https://github.com/grafikrobot
+team-linkedin: https://www.linkedin.com/in/rrivera/
+team-twitter: https://twitter.com/grafikrobot
 ---
 {% include team-bio.html %}
 
