--- a/people/vinnie.html
+++ b/people/vinnie.html
@@ -7,6 +7,7 @@ team-email: vinnie.falco@gmail.com
 team-site: http://vinniefalco.github.io
 team-site-text: vinniefalco.github.io
 team-resume: https://vinniefalco.github.io/2017_12_27%20Resume%20for%20Vinnie%20Falco.pdf
+team-stack-overflow: https://stackoverflow.com/users/150679/vinnie-falco
 team-github: https://github.com/vinniefalco
 team-linkedin: https://www.linkedin.com/in/vinnie-falco/
 team-twitter: https://twitter.com/FalcoVinnie
