--- a/slack/index.html
+++ b/slack/index.html
@@ -2,94 +2,128 @@
 layout: default
 title: C++ Language Slack Workspace
 ---
-{% include top-title.html heading="Slack" %}
+{% include top-title.html heading="Community" %}
 
-<h2>C++ Language Slack Community</h2>
-<p>
-This is a multi-channel Slack workspace environment which gathers
-users of C++ from around the world into the same place so we can
-all learn from each other. It is like IRC but with modern clients
-that support multimedia, notifications, and smart devices.
-</p>
+<section class="innerSection borderNone">
+  <div class="container">
+  <div class="pageHeadtxt"><h1>C++ Slack</h1><h2>C++ Slack</h2></div>
+  <div class="row">
+  <div class="col-lg-12">
 
-<table style="width: 100%;">
-  <tr id="regbuttons">
-    <td><div class="gold_box">
-        <a href="https://cpplang-inviter.herokuapp.com/" id="reglink" target="_new">I need an invitation to the C++ Slack workspace.</a>
-    </div></td>
-    <td width="32px"></td>
-    <td><div class="red_box">
-        <a href="https://cpplang.slack.com">I already have a C++ Slack workspace account.</a>
-    </div></td>
-  </tr>
-</table>
+  <p>
+  This is a multi-channel Slack workspace environment which gathers
+  users of C++ from around the world into the same place so we can
+  all learn from each other. It is like IRC but with modern clients
+  that support multimedia, notifications, and smart devices.
+  </p>
+  <p>
+    Choose one of the following to get started:
+  </p>
+  <ul class="newsS">
+    <li><a href="https://cpplang-inviter.herokuapp.com/" id="reglink" target="_new">I need an invitation to the C++ Slack workspace.</a></li>
+    <li><a href="https://cpplang.slack.com">I already have a C++ Slack workspace account.</a></li>
+  </ul>
 
-<h2>FAQ</h2>
+  </div>
+  </div>
+  </div>
+</section>
 
-<ul>
-<li><p><b>Why do you need my e-mail?</b></p><p>
-  Slack is invite based. Your e-mail address is used to register you
-  in the workspace. The invitation tool does not store your address.
-  </p></li>
+<section class="innerSection borderNone">
+  <div class="container">
+  <div class="pageHeadtxt"><h2>FAQ</h2></div>
+  <div class="row">
+  <div class="col-lg-12">
 
-<li><p><b>Who operates this Slack workspace?</b></p><p>
-  This workspace is paid for and operated in the public interest by
-  The C++ Alliance, Inc. in accordance with the mission to promote
-  the general welfare of the C++ programming language.
-  </p></li>
+  <ul>
+  <li><p><b>Why do you need my e-mail?</b></p><p>
+    Slack is invite based. Your e-mail address is used to register you
+    in the workspace. The invitation tool does not store your address.
+    </p></li>
 
-<li><p><b>What are the rules?</b></p><p>
-  Please remain professional in public channels. People from differing
-  cultures and locales all meet here to discuss C++ topics.
-  We ask that you follow the Code of Conduct.
-  </p></li>
+  <li><p><b>Who operates this Slack workspace?</b></p><p>
+    This workspace is paid for and operated in the public interest by
+    The C++ Alliance, Inc. in accordance with the mission to promote
+    the general welfare of the C++ programming language.
+    </p></li>
 
-<li><p><b>How are the rules enforced?</b></p><p>
-  Due to the sheer size of the community, it is not practical for
-  admins to police every channel all the time. When you see a user
-  acting poorly, consider letting them know in a nice way. Give a
-  benefit of the doubt generously, as spirited debate is sometimes
-  mistaken for bad behavior.</p><p>
-  If diplomacy fails and disruptions persist, please contact
-  <a href="https://cpplang.slack.com/account/workspace-settings#admins">one of the admins</a>
-  privately and explain the nature of the problem.
-  </p></li>
+  <li><p><b>What are the rules?</b></p><p>
+    Please remain professional in public channels. People from differing
+    cultures and locales all meet here to discuss C++ topics.
+    We ask that you follow the Code of Conduct.
+    </p></li>
 
-</ul>
+  <li><p><b>How are the rules enforced?</b></p><p>
+    Due to the sheer size of the community, it is not practical for
+    admins to police every channel all the time. When you see a user
+    acting poorly, consider letting them know in a nice way. Give a
+    benefit of the doubt generously, as spirited debate is sometimes
+    mistaken for bad behavior.</p><p>
+    If diplomacy fails and disruptions persist, please contact
+    <a href="https://cpplang.slack.com/account/workspace-settings#admins">one of the admins</a>
+    privately and explain the nature of the problem.
+    </p></li>
 
-<h3>Code of Conduct</h3>
-<ol>
-<li><p><b>Friendly cooperation</b></p>
-  <p><em>"First, do no harm."</em></p>
-  <p>Harassment, insults, discrimination,
-  and cyberbullying have no place here.
-  </p></li>
-<li><p><b>Safe for work</b></p><p>
-  Please treat all public channels as Safe For Work (SFW). Don't say
-  anything you wouldn't want a co-worker to see if they pass by your desk.
-  </p></li>
-<li><p><b>Stay on-topic</b></p><p>
-  In every public channel but especially the <b>#learn</b> channel
-  which is the most heavily joined, please refrain from off-topic
-  discussion. In public channels, avoid these topics altogether:
-  politics, religion, race, sexual orientation.
-  </p></li>
-<li><p><b>No excessive self-promotion</b></p><p>
-  A link to your project(s) or news item is of course welcome in the
-  <b>#plug_worthy</b> channel. However keep in mind that this
-  community is not intended to be an advertising platform.
-  </p></li>
-<li><p><b>Job offers</b></p><p>
-  Job offers are welcomed in the <b>#jobs</b> channel, but please include
-  the location, the company, a link to details and keep it in the relevant
-  room.
-  </p></li>
-</ol>
+  </ul>
 
-<h3>Links</h3>
-<ul>
-  <li><a href="https://cpplang.slack.com">C++ Language Slack Workspace</a></li>
-  <li><a href="https://cpplang.slack.com/account/workspace-settings#admins">List of Cpplang Admins</a></li>
-  <li><a href="https://slack.com/downloads">Slack Application Downloads</a></li>
-  <li><a href="https://cpplang-inviter.herokuapp.com/">Cpplang invite-bot</a></li>
-</ul>
+  </div>
+  </div>
+  </div>
+</section>
+
+<section class="innerSection borderNone">
+  <div class="container">
+  <div class="pageHeadtxt"><h2>Code of Conduct</h2></div>
+  <div class="row">
+  <div class="col-lg-12">
+
+  <ol>
+  <li><p><b>Friendly cooperation</b></p>
+    <p><em>"First, do no harm."</em></p>
+    <p>Harassment, insults, discrimination,
+    and cyberbullying have no place here.
+    </p></li>
+  <li><p><b>Safe for work</b></p><p>
+    Please treat all public channels as Safe For Work (SFW). Don't say
+    anything you wouldn't want a co-worker to see if they pass by your desk.
+    </p></li>
+  <li><p><b>Stay on-topic</b></p><p>
+    In every public channel but especially the <b>#learn</b> channel
+    which is the most heavily joined, please refrain from off-topic
+    discussion. In public channels, avoid these topics altogether:
+    politics, religion, race, sexual orientation.
+    </p></li>
+  <li><p><b>No excessive self-promotion</b></p><p>
+    A link to your project(s) or news item is of course welcome in the
+    <b>#plug_worthy</b> channel. However keep in mind that this
+    community is not intended to be an advertising platform.
+    </p></li>
+  <li><p><b>Job offers</b></p><p>
+    Job offers are welcomed in the <b>#jobs</b> channel, but please include
+    the location, the company, a link to details and keep it in the relevant
+    room.
+    </p></li>
+  </ol>
+
+  </div>
+  </div>
+  </div>
+</section>
+
+<section class="innerSection borderNone">
+  <div class="container">
+  <div class="pageHeadtxt"><h2>Links</h2></div>
+  <div class="row">
+  <div class="col-lg-12">
+
+  <ul class="newsS">
+    <li><a href="https://cpplang.slack.com">C++ Language Slack Workspace</a></li>
+    <li><a href="https://cpplang.slack.com/account/workspace-settings#admins">List of Cpplang Admins</a></li>
+    <li><a href="https://slack.com/downloads">Slack Application Downloads</a></li>
+    <li><a href="https://cpplang-inviter.herokuapp.com/">Cpplang invite-bot</a></li>
+  </ul>
+
+  </div>
+  </div>
+  </div>
+</section>
