Update blog, fix typos

--- a/index.html
+++ b/index.html
@@ -311,12 +311,12 @@ title: The C++ Alliance
         in ways that might otherwise be viewed as industrial "collusion," a
         trade group can accept tax-deductible dues from member companies. The
         Alliance is organized as a 501(c)(3) organization, a charity which can
-        accept tax deductible contributes from the general public.
+        accept tax deductible contributions from the general public.
         </p><p>
         Although the tax status of Software Freedom Conservancy and The C++
         Alliance are similar, their missions and concerns are different. There
         is mission overlap. Conservancy, whose mission is to support the
-        development of FLOSS libraries supports the Boost Libraries project,
+        development of FLOSS libraries, supports the Boost Libraries project,
         which would also be within the mission of The Alliance, but The Alliance
         has both a narrower and a broader mission. While Conservancy is language
         agnostic and is focused on software development, The Alliance is focused
