--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 title: The C++ Alliance
 ---
 <!--Video Section-->
+<!--
 <section class="content-section video-section">
- <!--<div class="overlay"></div>-->
   <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
     <source src="videos/sizzle_bw_720.mp4" type="video/mp4">
   </video>
@@ -17,7 +17,8 @@ title: The C++ Alliance
     </div>
   </div>
 </section>
-<!--Video Section Ends Here-->
+-->
+{% include top-title.html heading="The C++ Alliance" %}
 
 <!-- Mission section-->
 <section class="innerSection missionC" id="1">
