Jens is Advisor

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ title: The C++ Alliance
                   <div class="pic"><img src="/people/jens.jpg" alt=""></div>
                   <div class="details">
                     <h4>Jens Weller</h4>
-                    <span>Technical Committee</span>
+                    <span>Advisor</span>
                   </div>
                 </div>
                 </a>
