--- a/people/jens.html
+++ b/people/jens.html
@@ -2,7 +2,7 @@
 layout: team
 title: Jens Weller
 team-id: jens
-team-title: Technical Committee
+team-title: Advisor
 team-site: https://meetingcpp.com
 team-site-text: meetingcpp.com
 ---
