Update Acceptable Use Policy

--- a/slack/index.html
+++ b/slack/index.html
@@ -43,14 +43,14 @@ title: C++ Language Slack Workspace
 
   <li><p><b>Who operates this Slack workspace?</b></p><p>
     This workspace is paid for and operated in the public interest by
-    The C++ Alliance, Inc. in accordance with the mission to promote
+    The C++ Alliance in accordance with the mission to promote
     the general welfare of the C++ programming language.
     </p></li>
 
   <li><p><b>What are the rules?</b></p><p>
     Please remain professional in public channels. People from differing
     cultures and locales all meet here to discuss C++ topics.
-    We ask that you follow the Code of Conduct.
+    We ask that you follow the Acceptable Use Policy.
     </p></li>
 
   <li><p><b>How are the rules enforced?</b></p><p>
@@ -59,8 +59,10 @@ title: C++ Language Slack Workspace
     acting poorly, consider letting them know in a nice way. Give a
     benefit of the doubt generously, as spirited debate is sometimes
     mistaken for bad behavior.</p><p>
-    If diplomacy fails and disruptions persist, please contact
-    <a href="https://cpplang.slack.com/account/workspace-settings#admins">one of the admins</a>
+    If diplomacy fails and disruptions persist, mentioning <b>@mods</b>
+    in the channel will get the attention of the moderators. Or, you can
+    contact an admin
+    (<a href="https://cpplang.slack.com/account/workspace-settings#admins">list</a>)
     privately and explain the nature of the problem.
     </p></li>
 
@@ -73,28 +75,29 @@ title: C++ Language Slack Workspace
 
 <section class="innerSection borderNone">
   <div class="container">
-  <div class="pageHeadtxt"><h2>Code of Conduct</h2></div>
+  <div class="pageHeadtxt"><h2>Acceptable Use Policy</h2></div>
   <div class="row">
   <div class="col-lg-12">
 
   <ol>
-  <li><p><b>Friendly cooperation</b></p>
-    <p><em>"First, do no harm."</em></p>
-    <p>Harassment, insults, discrimination,
-    and cyberbullying have no place here.
+  <li><p><b>Friendly, professional cooperation</b></p>
+    <p><em>"First, do no harm."</em></p><p>
+    Unlawful statements (including but not limited to credible threats,
+    doxxing, cyber-bullying, stalking, or harassment) are prohibited
+    in <em>all channels</em>.
     </p></li>
   <li><p><b>Safe for work</b></p><p>
     Please treat all public channels as Safe For Work (SFW). Don't say
     anything you wouldn't want a co-worker to see if they pass by your desk.
     </p></li>
-  <li><p><b>Stay on-topic</b></p><p>
+  <li><p><b>On-topic discussion</b></p><p>
     In every public channel but especially the <b>#learn</b> channel
     which is the most heavily joined, please refrain from off-topic
     discussion. In public channels, avoid these topics altogether:
-    politics, religion, race, sexual orientation.
+    politics, religion, race, gender, sex.
     </p></li>
   <li><p><b>No excessive self-promotion</b></p><p>
-    A link to your project(s) or news item is of course welcome in the
+    A link to your project or news item is of course welcome in the
     <b>#plug_worthy</b> channel. However keep in mind that this
     community is not intended to be an advertising platform.
     </p></li>
