Point slack invite to our own VPS node app.
This fixes the horribly slow heroku service.

--- a/slack/index.html
+++ b/slack/index.html
@@ -20,7 +20,7 @@ title: C++ Language Slack Workspace
     Choose one of the following to get started:
   </p>
   <ul class="newsS">
-    <li><a href="https://cpplang-inviter.herokuapp.com/" id="reglink" target="_new">I need an invitation to the C++ Slack workspace.</a></li>
+    <li><a href="https://cpplang-inviter.cppalliance.org/" id="reglink" target="_new">I need an invitation to the C++ Slack workspace.</a></li>
     <li><a href="https://cpplang.slack.com">I already have a C++ Slack workspace account.</a></li>
   </ul>
 
@@ -123,7 +123,7 @@ title: C++ Language Slack Workspace
     <li><a href="https://cpplang.slack.com">C++ Language Slack Workspace</a></li>
     <li><a href="https://cpplang.slack.com/account/workspace-settings#admins">List of Cpplang Admins</a></li>
     <li><a href="https://slack.com/downloads">Slack Application Downloads</a></li>
-    <li><a href="https://cpplang-inviter.herokuapp.com/">Cpplang invite-bot</a></li>
+    <li><a href="https://cpplang-inviter.cppalliance.org/">Cpplang invite-bot</a></li>
   </ul>
 
   </div>
