Tidy up biographies

--- a/people/jon.html
+++ b/people/jon.html
@@ -13,4 +13,7 @@ linkedin: https://www.linkedin.com/in/jonkalb/
 twitter: https://twitter.com/_JonKalb/
 image: /images/people/jon.jpg
 ---
-Jon Kalb is a C++ community organizer. He chairs CppCon, C++Now, the Silicon Valley Code Camp C++ Track, and the Boost Steering Committee. Jon does on-site C++ training for companies around the world and is the author (with Gašper Ažman) of C++ Today: The Beast is Back.
+Jon Kalb is a C++ community organizer. He chairs CppCon, C++Now, the Silicon
+Valley Code Camp C++ Track, and the Boost Steering Committee. Jon does on-site
+C++ training for companies around the world and is the author (with Gašper
+Ažman) of C++ Today: The Beast is Back.
