--- a/people/louis.html
+++ b/people/louis.html
@@ -10,4 +10,12 @@ site: https://louistatta.wordpress.com/
 linkedin: https://www.linkedin.com/in/louis-tatta-83987b2/
 image: /images/people/louis.jpg
 ---
-Louis Tatta serves as the Chief Executive Officer of the Alliance and is responsible for the day-to-day operation and general management of the company.  Prior to joining, Mr. Tatta served as Chief Operating Officer at BearShare, where he managed operations of a technology startup, lead all business operations, new business development, product development, purchasing/procurement, and infrastructure development. Managed key account relationships and executed strategic marketing plans with advertising partners.  Previous to this, Mr. Tatta held various positions in the financial service industry.
+Louis Tatta serves as the Chief Executive Officer of the Alliance and is
+responsible for the day-to-day operation and general management of the
+company.  Prior to joining, Mr. Tatta served as Chief Operating Officer
+at BearShare, where he managed operations of a technology startup, lead
+all business operations, new business development, product development,
+purchasing/procurement, and infrastructure development. Managed key
+account relationships and executed strategic marketing plans with
+advertising partners.  Previous to this, Mr. Tatta held various
+positions in the financial service industry.
