--- a/people/louis.html
+++ b/people/louis.html
@@ -10,12 +10,31 @@ site: https://louistatta.wordpress.com/
 linkedin: https://www.linkedin.com/in/louis-tatta-83987b2/
 image: /images/people/louis.jpg
 ---
-Louis Tatta serves as the Chief Executive Officer of the Alliance and is
-responsible for the day-to-day operation and general management of the
-company.  Prior to joining, Mr. Tatta served as Chief Operating Officer
-at BearShare, where he managed operations of a technology startup, lead
-all business operations, new business development, product development,
-purchasing/procurement, and infrastructure development. Managed key
-account relationships and executed strategic marketing plans with
-advertising partners.  Previous to this, Mr. Tatta held various
-positions in the financial service industry.
+Louis Tatta is a highly effective business operations executive with
+20 years of experience.  Offering an array of skills in strategic vision
+implementation, business/financial acumen, talent acquisition and
+empowerment, leadership, performance analysis, marketing, campaign management,
+advertising, problem solving and software management.  Louis has a proven
+ability to multi-task in high stress, dynamic environments while driving
+growth and providing excellent customer service.
+
+Louis is a problem solver and known for his unique strategies and abstract
+ideas. He is someone who thinks outside of the box. Louis has a dynamic skill
+set that allows him to identify the root cause of problems. Thus, giving him
+the insight needed to figure out how to fix any issues.
+
+One thing that is telling about Louis is that he is an exceptional poker player
+because of his ability to spot random patterns and read others body language.
+
+Q&A With Louis Tatta Himself:
+
+Q: What are you complimented on most in your work?
+A: Savvy Problem Solver
+Q: Name three words that you describe you.
+A: Honest, committed, and methodical
+Q: How do you think your colleagues would describe you?
+A: My co-workers would describe me as a team player who is always willing to go above and beyond to get any task completed on time
+Q: What are some causes you care about?
+A: Ensuring Environmental Sustainability, Protecting Animals, Improving Access to Science, Technology, and Education.
+Q: What would be your personal motto? Or favorite quote & why?
+A: Throw Me To The Wolves And I Will Return Leading The Pack, I value leadership.
