Update Jon biography

--- a/people/jon.html
+++ b/people/jon.html
@@ -13,40 +13,41 @@ linkedin: https://www.linkedin.com/in/jonkalb/
 twitter: https://twitter.com/_JonKalb/
 image: /images/people/jon.jpg
 ---
-Jon Kalb is a community organizer. He chairs CppCon, C++Now, the
+<p>Jon Kalb is a community organizer. He chairs CppCon, C++Now, the
 Silicon Valley Code Camp C++ Track, and the Boost Steering Committee.
 Jon does on-site C++ training for companies around the world and is
-the author (with Gašper Ažman) of C++ Today: The Beast is Back.
+the author (with Ga&scaron;per Ažman) of C++ Today: The Beast is Back.</p>
 
-He is a software engineering autodidact and has been programming
+<p>He is a software engineering autodidact and has been programming
 professionally since 1991. Over the last two decades, he has written
 code for Amazon, Apple, Dow Chemical, Intuit, Lotus, Microsoft,
 Netscape, Sun, Yahoo! and a number of companies that you've not heard
-of.
+of.</p>
 
-Jon is best known for starting and running the world's largest C++
-conference and won “Best Tutorial” for his talk on Exception-Safe
+<p>Jon is best known for starting and running the world's largest C++
+conference and won &ldquo;Best Tutorial&rdquo; for his talk on Exception-Safe
 Code, so it isn't surprising that he has a passion for explaining C++
-well.
+well.</p>
 
-One thing Jon wants to accomplish as a community organizer at
+<p>One thing Jon wants to accomplish as a community organizer at
 C++Alliance is to help other programmers reach their goals. He is good
 at helping people figure out where they are and what they need to get
 to where they want to be. He finds it useful in training and working
-with exhibitors and conference sponsors.
+with exhibitors and conference sponsors.</p>
 
-Q&A With Jon Kalb Himself:
 
-Q: What are three words that describe you?
-A: Friendly, Engaging, & Knowledgeable
-Q: How does your education connect to your professional career? What
-about personal experiences?
-A: Have a Bachelors in Business Administration, which included a few
-programming electives, but I'm a self-taught programmer
-Q: Who is your ideal client and why should they connect with you?
-A: I love to work with companies that want to engage with the C++
-community. I can guide them on how to do this.
-Q: Do you have any skills or talents that most people don’t know about?
-A: If so, I don’t know about them. ;-).
-Q: What are you happiest doing, when you’re not working?
-A: I enjoy reading or listening to books or podcasts.
+<p>Q&amp;A With Jon Kalb Himself:</p>
+
+<p>Q: What are three words that describe you?
+<br />A: Friendly, Engaging, &amp; Knowledgeable
+<br />Q: How does your education connect to your professional career? What
+<br />about personal experiences?
+<br />A: Have a Bachelors in Business Administration, which included a few
+<br />programming electives, but I'm a self-taught programmer
+<br />Q: Who is your ideal client and why should they connect with you?
+<br />A: I love to work with companies that want to engage with the C++
+<br />community. I can guide them on how to do this.
+<br />Q: Do you have any skills or talents that most people don&rsquo;t know about?
+<br />A: If so, I don&rsquo;t know about them. ;-).
+<br />Q: What are you happiest doing, when you&rsquo;re not working?
+<br />A: I enjoy reading or listening to books or podcasts.</p>
