Update Louis biography
close #19

--- a/people/louis.html
+++ b/people/louis.html
@@ -10,31 +10,37 @@ site: https://louistatta.wordpress.com/
 linkedin: https://www.linkedin.com/in/louis-tatta-83987b2/
 image: /images/people/louis.jpg
 ---
-Louis Tatta is a highly effective business operations executive with
-20 years of experience.  Offering an array of skills in strategic vision
-implementation, business/financial acumen, talent acquisition and
-empowerment, leadership, performance analysis, marketing, campaign management,
-advertising, problem solving and software management.  Louis has a proven
-ability to multi-task in high stress, dynamic environments while driving
-growth and providing excellent customer service.
+<p>
+Louis Tatta is a highly effective business operations executive with 20 years
+of experience. Offering an array of skills in strategic vision implementation,
+business/financial acumen, talent acquisition and empowerment, leadership,
+performance analysis, marketing, campaign management, advertising, problem
+solving and software management. Louis has a proven ability to multi-task in
+high stress, dynamic environments while driving growth and providing excellent
+customer service.</p>
 
-Louis is a problem solver and known for his unique strategies and abstract
+<p>Louis is a problem solver and known for his unique strategies and abstract
 ideas. He is someone who thinks outside of the box. Louis has a dynamic skill
 set that allows him to identify the root cause of problems. Thus, giving him
-the insight needed to figure out how to fix any issues.
+the insight needed to figure out how to fix any issues.</p>
 
-One thing that is telling about Louis is that he is an exceptional poker player
-because of his ability to spot random patterns and read others body language.
+<p>One thing that is telling about Louis is that he is an exceptional poker
+player because of his ability to spot random patterns and read others body
+language.</p>
 
-Q&A With Louis Tatta Himself:
+<h2>Q&amp;A With Louis Tatta Himself:</h2>
 
-Q: What are you complimented on most in your work?
-A: Savvy Problem Solver
-Q: Name three words that you describe you.
-A: Honest, committed, and methodical
-Q: How do you think your colleagues would describe you?
-A: My co-workers would describe me as a team player who is always willing to go above and beyond to get any task completed on time
-Q: What are some causes you care about?
-A: Ensuring Environmental Sustainability, Protecting Animals, Improving Access to Science, Technology, and Education.
-Q: What would be your personal motto? Or favorite quote & why?
-A: Throw Me To The Wolves And I Will Return Leading The Pack, I value leadership.
+<ul>
+<li>Q: What are you complimented on most in your work?
+    <p>A: Savvy Problem Solver</p></li>
+<li>Q: Name three words that you describe you.
+    <p>Honest, committed, and methodical</p></li>
+<li>Q: How do you think your colleagues would describe you?
+    <p>My co-workers would describe me as a team player who is always
+    willing to go above and beyond to get any task completed on time</p></li>
+<li>Q: What are some causes you care about?
+    <p>Ensuring Environmental Sustainability, Protecting Animals, Improving
+    Access to Science, Technology, and Education.</p></li>
+<li>Q: What would be your personal motto? Or favorite quote &amp; why?
+    <p>Throw Me To The Wolves And I Will Return Leading The Pack, I value leadership.</p></li>
+</ul>
