--- a/people/glen.html
+++ b/people/glen.html
@@ -17,7 +17,7 @@ Glen Joseph Fernandes has worked at Intel and Microsoft as a Software Engineer.
 He is the author of the Boost Align library, a major contributor the the Boost
 Smart Pointers and Boost Core libraries, and has also contributed to several
 other Boost C++ libraries. He is a contributor to the ISO C++ Standard by
-authoring proposal papers and defect reports, and has two features accepted
-for the upcoming C++20 standard (P0673R1, P0653R2). He lives with his wife,
-Caroline, and daughter, Aeryn, in the US, graduated from the University of
-Sydney, Australia, and before all that, lived in New Zealand.
+authoring proposal papers and defect reports, and has four features accepted
+for the upcoming C++20 standard (P0674R1, P0653R2, P1020R1, P1357R1). He lives
+with his wife, Caroline, and daughter, Aeryn, in the US, graduated from the
+University of Sydney, Australia, and before all that, lived in New Zealand.
