--- a/index.html
+++ b/index.html
@@ -17,36 +17,27 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
         <h2 class='header-shadow'>Mission</h2>
       </div>
 
-      <h3 class="text-m section-subheader">An Organization Empowering The C++ Community</h3>
+      <h3 class="text-m section-subheader">Empower The C++ Community</h3>
       <div class='formatted-text'>
-        <p class='text-xxs'>Mankind is reliant on software, for all aspects of life. Software is the
-        foundation of commerce, industry, recreation, transportation, communication,
-        and more. The best software solutions are written using the C++ programming
-        language.</p>
-        <p class='text-xxs'>The C++ Alliance (a California non-profit 501(c)(3)-pending organization)
-        recognizes that great programs have yet to be developed due to a lack of
-        required resources. As a result we stand behind “open source." Through open
-        source libraries, the original code is available to be redistributed and
-        modified without restrictions. This allows for better collaboration among
-        programmers. Our primary function is to advance the development of open
-        source software. It is our mission to empower programmers.</p>
-        <p class='text-xxs'>We intend to build a better programming environment. The Alliance envisions
-        support for the creation and distribution of open source libraries, achieved
-        by developing, communicating and promoting the best programming practices.
-        It is our desire to support the creation and use of better standards and tools
-        for when working with source code.</p>
-        <p class='text-xxs'>The Alliance supports individuals and organizations with similar goals by:</p>
+        <p class='text-xxs'>Our mission is to make the C++ programming language accessible and useful
+        to anyone who wishes to learn and apply the language. C++ is not only popular and foundational,
+        but also an efficient and general purpose programming language that anyone can learn.
+        Learning C++ gives students knowledge of computer architecture, and helps them compete in
+        the global marketplace. These languages have formed the technological foundations of our
+        modern world, from the in-flight software enabling the Apollo moon landing to the software
+        aspect of all computing devices.</p>
+        <p class='text-xxs'>The C++ libraries and community often lack resources, due to their free
+        nature and the reliance on volunteers to conduct the highly advanced and time-intensive work
+        of maintaining and improving code libraries. Educational materials and opportunities are not
+        as robust and affordable as they could be, and some of the most useful and impactful C++-based
+        programs have yet to be developed due to this lack of required resources.</p>
+        <p class='text-xxs'>The founders recognize the need to secure funding and resources in order to adequately support
+        those seeking to learn and use the C++ programming language.  To achieve these ends, the Charity:</p>
         <ul class='section-list list'>
-          <li class='text-xxs section-list-item'>Employing "staff engineers" to write code, produce tools, and advance
-          the interests of the C++ community.</li>
-          <li class='text-xxs section-list-item'>Provide travel grants for industry professionals to attend events,
-          including ISO Standards Committee meetings, conferences, or other
-          relevant gatherings.</li>
-          <li class='text-xxs section-list-item'>Offering incentives or bounties to individuals or groups for achieving
-          goals in alignment with the mission.</li>
-          <li class='text-xxs section-list-item'>Selectively sponsoring other organizations with overlapping objectives.</li>
-        </ul>
-        <p class='text-xxs'>We are dedicated to helping the C++ programming language evolve. We see it developing as an ecosystem of open source libraries and as a growing community of those who contribute to those libraries.</p>
+          <li class='text-xxs section-list-item'>Funds and supports educational resources and initiatives.</li>
+          <li class='text-xxs section-list-item'>Evolves C++ through expertly maintained code libraries, and</li>
+          <li class='text-xxs section-list-item'>Supports a growing programming community and educational environment.</li>
+          <p class='text-xxs'>The best software solutions are written using the C++ programming language.</p>
       </div>
     </div>
     <div class='col-half col-right'>
@@ -70,7 +61,7 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
           <img alt="Library" class='activities-img libraries' src="{{ site.baseurl }}/images/icons/library.svg"/>
         </div>
         <h3 class="text-m activity-title">Libraries</h3>
-        <p class='text-xxs activities-text'>Support efforts to author high quality open source C++ libraries. Contribute to peer-reviewed projects such as the <a href="https://www.boost.org/">Boost</a> library collection.</p>
+        <p class='text-xxs activities-text'>Support efforts to author free, high quality, non-proprietary C++ libraries. Contribute to peer-reviewed projects such as the <a href="https://www.boost.org/">Boost</a> library collection.</p>
       </div>
 
       <div class="col-fourth activity-col">
@@ -279,7 +270,7 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
       <h3 class="text-m section-subheader">Given the existence of Standard C++ Foundation and Software Freedom Conservancy, why was it necessary to form The C++ Alliance as a new, separate legal entity?</h3>
       <p class='text-xxs'> Although the missions of Standard C++ Foundation and The C++ Alliance are similar and overlapping, they have different status under tax law. The Foundation is organized as a 501(c)(6) organization, a trade group. In addition to providing legal protection for companies to work together in ways that might otherwise be viewed as industrial "collusion," a trade group can accept tax-deductible dues from member companies. The Alliance is organized as a 501(c)(3) organization, a charity which can accept tax deductible contributions from the general public.</p>
       <p class='text-xxs'>Although the tax status of Software Freedom Conservancy and The C++ Alliance are similar, their missions and concerns are different. There is mission overlap. Conservancy, whose mission is to support the development of FLOSS libraries, supports the Boost Libraries project, which would also be within the mission of The Alliance, but The Alliance has both a narrower and a broader mission. While Conservancy is language agnostic and is focused on software development, The Alliance is focused exclusively on the C++ environment and is free to support non-FLOSS projects such as language proposals, books, education materials, tools, or other projects which may not be software or may have non-FLOSS licensing.</p>
-      <p class='text-xxs'>It is also the case that The C++ Alliance is not a good fit as a Conservancy project. It is appropriate for small open-source projects to pool their resources to provide themselves with financial, legal, accounting, and other services for which they have a common need and for which they may, individually, be too small to economically procure. Although the Alliance will be promoting library development, it doesn't have the same requirements as a FLOSS software producer, so would need different services than your typical Conservancy project and has sufficient endowment to fund the services that it will require.</p>
+      <p class='text-xxs'>It is also the case that The C++ Alliance is not a good fit as a Conservancy project. It is appropriate for small non-proprietary projects to pool their resources to provide themselves with financial, legal, accounting, and other services for which they have a common need and for which they may, individually, be too small to economically procure. Although the Alliance will be promoting library development, it doesn't have the same requirements as a FLOSS software producer, so would need different services than your typical Conservancy project and has sufficient endowment to fund the services that it will require.</p>
     </div>
   </section>
 </div>
