--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
         <p class='text-xxs'>Our mission is to make the C++ programming language accessible and useful
         to anyone who wishes to learn and apply the language. C++ is not only popular and foundational,
         but also an efficient and general purpose programming language that anyone can learn.
-        Learning C++ gives students knowledge of computer architecture, and helps them compete in
+        Teaching C++ gives students knowledge of computer architecture, and helps them compete in
         the global marketplace. These languages have formed the technological foundations of our
         modern world, from the in-flight software enabling the Apollo moon landing to the software
         aspect of all computing devices.</p>
@@ -34,9 +34,10 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
         <p class='text-xxs'>The founders recognize the need to secure funding and resources in order to adequately support
         those seeking to learn and use the C++ programming language.  To achieve these ends, the Charity:</p>
         <ul class='section-list list'>
-          <li class='text-xxs section-list-item'>Funds and supports educational resources and initiatives.</li>
+          <li class='text-xxs section-list-item'>Funds and supports educational resources and initiatives,</li>
           <li class='text-xxs section-list-item'>Evolves C++ through expertly maintained code libraries, and</li>
           <li class='text-xxs section-list-item'>Supports a growing programming community and educational environment.</li>
+        </ul>
           <p class='text-xxs'>The best software solutions are written using the C++ programming language.</p>
       </div>
     </div>
